--- a/aio/src/app/layout/nav-item/nav-item.component.html
+++ b/aio/src/app/layout/nav-item/nav-item.component.html
@@ -2,6 +2,7 @@
   <a href="{{node.url}}" [ngClass]="classes" title="{{node.tooltip}}"
     class="vertical-menu-item">
     <span>{{node.title}}</span>
+    <div *ngIf="node.translated">✅</div>
   </a>
 </div>
 
